--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,3 +33,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-style: normal;
+  font-family: 'Montserrat', sans-serif;
+}
